# magelang

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO  build.rs  hello.wasm  slice.wasm  triangle.wasm
.github/workflows/: build.yml  rust.yml
examples/: a.bst  a.mag  a_plus_b.mg  aplusb.mag  b.mag  c.mag  d.mag  debug.mag  deref_extern.mg  ds.mg  echo.mag  example1.mag  example2.mag  example3.mag  example4.mag  example5.mag  gcd.mg  hello.mag  hello.mg  printing.mg  returning_struct.mg  slice.mag  triangle.mag  triangle.mg
examples/examples/: example1.mag
lib/std/: mem.mag  wasi.mag  wasm.mag
magelang/: Cargo.toml
magelang/lib/std/: fmt.mg  mem.mg  slice.mg  vector.mg  wasi.mg  wasm.mg
magelang/src/: main.rs
magelang/tests/: main.rs
magelang/tests/test_000/: main.mg
magelang/tests/test_001/: main.mg
magelang/tests/test_001_fail/: expected_errors  main.mg
magelang/tests/test_002/: main.mg
magelang/tests/test_002_fail/: expected_errors  main.mg
magelang/tests/test_003/: main.mg
magelang/tests/test_004/: main.mg
magelang_analyzer/: Cargo.toml
magelang_analyzer/src/: analyze.rs  errors.rs  expr.rs  interner.rs  lib.rs  name.rs  path.rs  scope.rs  statements.rs  symbols.rs  tree_ir.rs  ty.rs  value.rs
magelang_codegen/: Cargo.toml
magelang_codegen/src/: data.rs  func.rs  gen.rs  layout.rs  lib.rs  ty.rs  var.rs
magelang_codegen2/: Cargo.toml
magelang_codegen2/src/: data.rs  func.rs  gen.rs  layout.rs  lib.rs  ty.rs  var.rs
magelang_common/: Cargo.toml
magelang_common/src/: errors.rs  file.rs  lib.rs  pos.rs  symbols.rs
magelang_compiler/: Cargo.toml
magelang_compiler/src/: lib.rs
magelang_cranelift/: Cargo.toml
magelang_cranelift/src/: lib.rs
magelang_package/: Cargo.toml
magelang_package/src/: lib.rs
magelang_runner/: Cargo.toml
magelang_runner/src/: lib.rs
magelang_semantic/: Cargo.toml
magelang_semantic/src/: assignable.rs  ast.rs  builtin.rs  checker.rs  db.rs  def.rs  error.rs  expr.rs  lib.rs  names.rs  native.rs  package.rs  printer.rs  scope.rs  statement.rs  stmt.rs  symbol.rs  ty.rs  types.rs  value.rs
magelang_syntax/: Cargo.toml
magelang_syntax/data/: test1.err  test1.mg
magelang_syntax/src/: ast.rs  error.rs  errors.rs  lib.rs  number.rs  number_lit.rs  parser.rs  scanner.rs  string.rs  string_lit.rs  token.rs  tokens.rs
magelang_syntax/tests/: invalid_ast.rs  parse_error.mg  parse_error.rs
magelang_test/: Cargo.toml
magelang_test/src/: lib.rs
magelang_test/tests/: stdin_stdout.rs
magelang_typecheck/: Cargo.toml
magelang_typecheck/src/: analyze.rs  checker.rs  constant.rs  errors.rs  expr.rs  global_init.rs  interner.rs  lib.rs  path.rs  scope.rs  statement.rs  ty.rs  value.rs
magelang_typecheck2/: Cargo.toml
magelang_typecheck2/src/: analyze.rs  errors.rs  generic_ty.rs  interner.rs  lib.rs  ty.rs
magelang_wasm/: Cargo.toml
magelang_wasm/src/: ir.rs  lib.rs  program.rs
magelang_wasmgen/: Cargo.toml
magelang_wasmgen/src/: code.rs  context.rs  data.rs  errors.rs  expr.rs  func.rs  gen.rs  lib.rs  mangling.rs  ty.rs  var.rs
src/: analyzer.rs  ast.rs  bytecode.rs  compiler.rs  compiler.rs.bak  errors.rs  expr_helper.rs  header_processor.rs  lexer.rs  lib.rs  linker.rs  main.rs  mangler.rs  parser.rs  parser2.rs  pos.rs  semantic.rs  token.rs  type_helper.rs  util.rs  vm.rs  vm.rs.bak
src/analyzer/: expr.rs  header.rs  mod.rs  types.rs  unit.rs
src/analyzer.bak/: expr_helper.rs  header_processor.rs  mod.rs  type_helper.rs  unit_analyzer.rs
src/ast/: ast.rs  error.rs  expr.rs  function.rs  mod.rs  parser.rs  repr.rs  root.rs  statement.rs  types.rs
src/bytecode/: instructions.rs  mod.rs  model.proto  model.rs  program.rs
src/chars/: chars.rs  mod.rs  reader.rs
src/compiler/: mod.rs
src/interpreter/: dtype.rs  mod.rs  value.rs
src/lexer/: error.rs  helper.rs  lex.rs  lexer.rs  mod.rs
src/parser/: assign_parser.rs  binary_parser.rs  block_parser.rs  call_parser.rs  cast_parser.rs  expr.rs  expr_parser.rs  expr_stmt_parser.rs  fn_parser.rs  if_parser.rs  mod.rs  param_parser.rs  primary_parser.rs  return_parser.rs  root_parser.rs  selector_parser.rs  statement_parser.rs  struct_parser.rs  type_parser.rs  unary_parser.rs  var_parser.rs  (+1 more)
std/: fmt.mag  mem.mag  wasi.mag  wasm.mag
wasm_helper/: Cargo.toml
(+30 files in other folders)
