[package]
name = "magelang"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magelang_syntax = { path = "../magelang_syntax" }
magelang_analyzer = { path = "../magelang_analyzer" }
magelang_codegen = { path = "../magelang_codegen" }
wasm_helper = { path = "../wasm_helper" }
clap = { version = "4.0", features = ["derive"] }

