[package]
name = "magelang"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
magelang_syntax = { path = "../magelang_syntax" }
magelang_typecheck = { path = "../magelang_typecheck" }
magelang_wasmgen = { path = "../magelang_wasmgen" }
wasm_helper = { path = "../wasm_helper" }
clap = { version = "4.0", features = ["derive"] }
wasmtime = "16.0.0"
wasmtime-wasi = "16.0.0"
binaryen = "0.13.0"

