[package]
name = "magelang_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magelang_typecheck = { path = "../magelang_typecheck" }
wasm_helper = { path = "../wasm_helper" }
indexmap = "1.9.3"
