[package]
name = "magelang_cranelift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magelang_common = { path = "../magelang_common/"}
magelang_semantic = { path = "../magelang_semantic/"}
target-lexicon = "0.12.6"
cranelift-object = "0.94.0"
cranelift-module = "0.94.0"
cranelift-frontend = "0.94.0"
cranelift-codegen = "0.94.0"
tempfile = "3.5.0"
