[package]
name = "magelang_typecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magelang_syntax = { path = "../magelang_syntax" }
indexmap = "1.9.3"
home = "0.5.5"
bumpalo = { version = "3.14.0", features = ["collections"] }

