[package]
name = "magelang_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magelang_common = { path = "../magelang_common/"}
magelang_semantic = { path = "../magelang_semantic/"}
walrus = "0.19.0"
indexmap = "1.9.2"
